--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <h1>First time writing HTML from scratch!</h1>
+  <p>This experience is great.  I find it interesting to work on the Learn IDE platform.  The in browser function option makes working with this lab very convenient.</p>
+  <h3>Making an unordered list</h3>
+  <ul>This</ul>
+  <ul>Is</ul>
+  <ul>Fun!</ul>
+  <h3>Making an ordered list</h3>
+  <ol>Is</ol>
+  <ol>It</ol>
+  <ol>Working?</ol>
+</html>
