--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <h5> This is the Title</h5>
+    
+  </head>
+  <body>
+    <p> This is a body paragraph </p>
+    
+  </body>
+</html>
